Comment ! create / delete
Get it when you load a ressource

DB + API
